--- a/src/index.css
+++ b/src/index.css
@@ -68,28 +68,19 @@ code {
   margin-right: auto;
 }
 
-#scores div {
+/* #scores div {
   overflow: hidden;
   position: relative;
-}
+} */
 
-#scores img {
-  opacity: 0.6;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: auto;
-}
-
-#scores img {
+/* #scores img {
   opacity: 0.1;
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-}
+} */
 
 
 #scores table {
